# SQLite-FTS5-Android

./: .gitignore  CMakeLists.txt.hunter  Dockerfile  LICENSE  README.md  build.gradle  docker-gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/plangrid/android/sqlitefts5example/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/plangrid/android/sqlitefts5example/: DatabaseHelper.java  FTS5ExampleApp.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/plangrid/android/sqlitefts5example/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sqlite-fts5/: android-release-aar.gradle  build.gradle
sqlite-fts5/src/main/: AndroidManifest.xml  CMakeLists.txt  Makefile
sqlite-fts5/src/main/java/com/plangrid/android/sqlitefts5/: SQLiteFTS5Module.java
sqlite-fts5/src/main/res/values/: strings.xml
